Revert "Merge remote-tracking branch 'origin/alan1.3' into Mili"
This reverts commit 4ef0d11d875ad7285e7cadaa6b948b558e34110c, reversing
changes made to 17800c65feb0550a458248acd15d88883391780f.