@@ -2,73 +2,79 @@ package com.market.svcentral;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-import javax.persistence.*;
 
-@Entity
 public class OrdenDeCompra {
-    @Id
     private int numero;
     private float precioTotal;
     private LocalDateTime fecha;
-
-    @OneToMany(cascade = CascadeType.PERSIST)
     private Map<Integer, Item> items;
-    
-    // Cambio: Eliminamos @OneToMany ya que DTEstado es embebido
-    @ElementCollection
     private List<DTEstado> estados;
-
-    @OneToMany(cascade = CascadeType.PERSIST)
     private List<Comentario> comentarios; 
-    
-    @ManyToOne
-    @JoinColumn(name = "proveedorNick")
     private Proveedor proveedor;
 
-    public OrdenDeCompra() {
+    public OrdenDeCompra(int numero) {
+        this.fecha = LocalDateTime.now();
+        this.numero = numero;
+        this.precioTotal = 0;
         this.items = new HashMap<>();
-        this.comentarios = new ArrayList<>();
+        this.comentarios = new ArrayList<>(); 
         this.estados = new ArrayList<>();
+        this.estados.add(new DTEstado("En preparación", "PREPARANDO PAQUETE"));
+        
     }
 
     public OrdenDeCompra(Map<Integer, Item> itemsAdquiridos, float precioTotal, Proveedor proveedor) {
         Random random = new Random();
-        this.numero = random.nextInt(1000); // o algún otro método para generar números de orden únicos
+        this.items = itemsAdquiridos;
+        this.numero = random.nextInt(1000);
         this.precioTotal = precioTotal;
         this.fecha = LocalDateTime.now();
-        this.items = itemsAdquiridos;
-        this.comentarios = new ArrayList<>();
         this.estados = new ArrayList<>();
+        this.estados.add(new DTEstado("En preparación", "PREPARANDO PAQUETE"));
         this.proveedor = proveedor;
-
-        // Estado inicial
-        DTEstado estadoComprada = new DTEstado("Comprada", "El cliente ha realizado la compra");
-        this.estados.add(estadoComprada);
-    }
-
-    // Métodos de gestión de estado
-    public void agregarEstado(String estado, String comentarios) {
-        DTEstado nuevoEstado = new DTEstado(estado, comentarios);
-        this.estados.add(nuevoEstado);
     }
     
-    public void setEstado(DTEstado estado) {
-    	this.estados.add(estado);
+    public Proveedor getProveedor() {
+        return proveedor;
+    }
+    
+    public List<Comentario> getComentarios() {
+        return comentarios;
     }
 
+    public void agregarComentario(String comentarioTexto, Cliente autor) {
+        if (autor == null) {
+            throw new IllegalArgumentException("El autor no puede ser null");
+        }
+        Comentario nuevoComentario = new Comentario(numero, comentarioTexto, autor, fecha);
+        comentarios.add(nuevoComentario);
+    }
+
+
+
+    // Métodos para gestionar los estados
     public String getEstado() {
-        return estados.isEmpty() ? "Sin estado" : estados.get(estados.size() - 1).getEstado();
+        //return estados.getLast().getEstado(); // Devuelve el último estado
+        return estados.get(estados.size() - 1).getEstado(); // Accede al último estado por índice
+
     }
 
+    public void setEstado(String nuevoEstado, String comentarios) {
+        estados.add(new DTEstado(nuevoEstado, comentarios));
+    }
+   
     public List<DTEstado> getHistorialEstado() {
         return estados;
     }
+    
 
-    // Otros métodos y getters/setters
+    // Getters y Setters:
+    
     public int getNumero() {
         return numero;
     }
@@ -89,14 +95,20 @@ public class OrdenDeCompra {
         return items;
     }
 
-    public List<Comentario> getComentarios() {
-        return comentarios;
+    private void setPrecioTotal() {
+        float total = 0;
+        if (items.isEmpty()) {
+            this.precioTotal = 0;
+        } else {
+            Collection<Item> col = items.values();
+            for (Item i : col) {
+                total += i.getSubTotal();
+            }
+            this.precioTotal = total;
+        }
     }
 
-    public Proveedor getProveedor() {
-        return proveedor;
-    }
-
+    // Métodos para manejar los items
     public void addItem(Producto producto, int cant) {
         if (items.containsKey(producto.getNumRef())) {
             Item item = items.get(producto.getNumRef());
@@ -113,18 +125,11 @@ public class OrdenDeCompra {
         setPrecioTotal();
     }
 
-    private void setPrecioTotal() {
-        float total = 0;
-        if (!items.isEmpty()) {
-            for (Item i : items.values()) {
-                total += i.getSubTotal();
-            }
-        }
-        this.precioTotal = total;
-    }
-
-    // Método para crear el DTO de la orden
     public DTOrdenDeCompra crearDT() {
         return new DTOrdenDeCompra(numero, getItems(), getPrecioTotal(), getHistorialEstado());
     }
+
+   
+    
+
 }
